--- a/src/main/resources/templates/customer/sign-in.html
+++ b/src/main/resources/templates/customer/sign-in.html
@@ -14,7 +14,7 @@
     <div class="logo">
         <a href="http://localhost:1211/customer/home"><img src="/images/logo.png" alt="logo" class="logo-img"></a>
     </div>
-    <form>
+    <form action="" method="">
         <div class="container">
             <h1 class="header">Sign In</h1>
             <input placeholder="Email or mobile number" type="email" class="input" id="email-input">
