--- a/src/main/resources/static/style/category.css
+++ b/src/main/resources/static/style/category.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color:#
 }
 
 .admin-container {
@@ -144,8 +145,9 @@ label{
 
 #addproductbtn{
     position:absolute;
-    background-color:#6b2e96;
+    background-color:#B57EDC;
     color:#EFEFEF;
+    border:none;
     font-size:18px;
     width:200px;
     height:40px;
@@ -173,6 +175,9 @@ label{
 }
 
 .popup {
+    position:absolute;
+    top: 8%;
+    left: 35%;
     background: white;
     padding: 60px;
     border-radius: 10px;
