--- a/src/main/resources/static/style/fragment/common.css
+++ b/src/main/resources/static/style/fragment/common.css
@@ -6,27 +6,28 @@ body {
 .navbar {
     display: flex;
     position: absolute;
-    top: 0;
+    top:0;
     justify-content: space-between;
     align-items: center;
     background-color: #67308D;
     height: 6.25rem;
     width: 100%;
+    z-index:10;
 }
 
 .navbar ul li {
     display: inline-block;
-    margin-left: 1.87rem;
-    right: 12.5;
+    margin-left: 1.875rem;
+    right: 12.5rem;
 }
 
 .navbar li a {
     color: #EFEFEF;
     text-decoration: none;
-    padding: 0.62rem;
-    font-size: 1.12rem;
+    padding: 0.500rem;
+    font-size: 1.125rem;
     font-weight: bolder;
-    border-radius: 0.312rem;
+    border-radius: 0.3125rem;
 }
 
 .lists {
