--- a/src/main/resources/static/style/plp.css
+++ b/src/main/resources/static/style/plp.css
@@ -23,42 +23,42 @@ hr{
     justify-content: space-between;
     align-items: center;
     background-color: #67308D;
-    height: 100px;
+    height: 6.25rem;
     width: 100%;
     z-index:10;
 }
 
 .navbar ul li {
     display: inline-block;
-    margin-left: 30px;
-    right: 200px;
+    margin-left: 1.875rem;
+    right: 12.5rem;
 }
 
 .navbar li a {
     color: #EFEFEF;
     text-decoration: none;
-    padding: 10px;
-    font-size: 18px;
+    padding: 0.500rem;
+    font-size: 1.125rem;
     font-weight: bolder;
-    border-radius: 5px;
+    border-radius: 0.3125rem;
 }
 
 .logo-img {
-    width: 130px;
-    height: 80px;
+    width: 8.125rem;
+    height: 5rem;
 }
 
 .search-btn {
     position: relative;
-    top: 5px;
-    margin: 2px;
+    top: 0.3125rem;
+    margin: 0.125rem;
     background-color: #901bb7;
     border: none;
-    font-size: 23px;
+    font-size: 1.4375rem;
     color: #ffffff;
-    width: 110px;
-    height: 40px;
-    border-radius: 15px;
+    width: 6.875rem;
+    height: 2.5rem;
+    border-radius: 0.9375rem;
     transition: 0.3s ease;
 }
 
@@ -78,8 +78,8 @@ hr{
 
 .head-filter{
     position:relative;
-    padding:20px 10px;
-    margin-left:5px;
+    padding:1.25rem 0.625rem;
+    margin-left:0.3125rem;
 }
 .categories{
     text-transform: uppercase;
@@ -87,79 +87,77 @@ hr{
 
 .categories-heading {
     position:relative;
-    padding:10px;
-    left:5px;
+    padding:0.625rem;
+    left:0.3125rem;
     font-weight:600;
 }
 
 .categories p{
     position:relative;
-    margin-bottom:10px;
+    margin-bottom:0.625rem;
     color:rgb(124, 123, 123);
-    font-size:12px;
-    margin-top:10px;
-    margin-bottom:5px;
-    margin-left:10px;
+    font-size:0.75rem;
+    margin-top:0.625rem;
+    margin-bottom:0.3125rem;
+    margin-left:0.625rem;
     font-weight: 700;
 }
 
 .price p{
     position: relative;
-    margin-top:10px;
+    margin-top:0.625rem;
 }
 
 .input-range{
-    margin-left:10px;
-    margin-top:10px;
-    margin-bottom:10px;
+    margin-left:0.625rem;
+    margin-top:0.625rem;
+    margin-bottom:0.625rem;
     width:90%;
 }
 
 .filter-category{
     position:relative;
-    padding:20px 10px;
+    padding:1.25rem 0.625rem;
 }
 
 .product-head{
     display:inline;
     position:absolute;
-    top:120px;
-    margin-left:20px;
+    top:7.5rem;
+    margin-left:1.25rem;
 }
 
 .product {
     background-color:#EFEFEF;
     position: relative;
     display:block;
-    left:300px;
+    left:18.75rem;
     width:80%;
 }
 
 .product-container{
     display: flex;
     position: relative;
-    top: 180px;
+    top: 11.25rem;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 40px;
+    gap: 2.5rem;
 }
 
 .product-card {
-    flex: 0 0 calc(100% / 2 - 20px);
-    /* 4 cards visible at a time with spacing */
-    max-width: calc(100% / 4 - 40px);
-    /* Same as flex-basis */
+    flex: 0 0 calc(50% - 1.25rem);
+    max-width: calc(25% - 2.5rem);
     background: #ffffff;
-    border-radius: 8px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    height: 450px;
+    border-radius: 0.5rem;
+    box-shadow: 0px 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
+    height: 28.125rem;
 }
 
 .product-image {
     position: relative;
     width: 100%;
-    height: 350px;
+    height: 21.875rem;
     overflow: hidden;
 }
 
@@ -172,26 +170,26 @@ hr{
 .discount-tag {
     position: absolute;
     background: #fff;
-    padding: 5px;
-    border-radius: 5px;
+    padding: 0.3125rem;
+    border-radius: 0.3125rem;
     color: #bb8fce;
-    right: 10px;
-    top: 10px;
+    right: 0.625rem;
+    top: 0.625rem;
     text-transform: capitalize;
 }
 
 .card-btn {
     position: absolute;
-    bottom: 10px;
+    bottom: 0.625rem;
     left: 50%;
     transform: translateX(-50%);
-    padding: 10px;
+    padding: 0.625rem;
     width: 90%;
     text-transform: capitalize;
     border: none;
     outline: none;
     background: #ffffff;
-    border-radius: 5px;
+    border-radius: 0.3125rem;
     transition: 0.5s;
     cursor: pointer;
     opacity: 0;
@@ -208,8 +206,8 @@ hr{
 
 .product-info {
     width: 100%;
-    height: 40px;
-    padding: 10px;
+    height: 2.5rem;
+    padding: 0.625rem;
 }
 
 .product-brand {
@@ -218,161 +216,22 @@ hr{
 
 .product-short-description {
     width: 100%;
-    height: 20px;
-    line-height: 20px;
+    height: 1.25rem;
+    line-height: 1.25rem;
     overflow: hidden;
     opacity: 0.5;
     text-transform: capitalize;
-    margin: 5px 0;
+    margin: 0.3125rem 0;
 }
 
 .price {
     font-weight: 900;
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 .actual-price {
-    margin-left: 20px;
+    margin-left: 1.25rem;
     opacity: 0.5;
     text-decoration: line-through;
-    font-size: 16px;
-}
-
-
-.footer {
-    top: 200px;
-    position: relative;
-    background-color: #EFEFEF;
-    width: 100%;
-}
-
-.first-bar {
-    font-size: 15px;
-    font-weight: 300;
-    position: absolute;
-    background-color: #1C1948;
-    height: 80px;
-    width: 100%;
-    color: #EFEFEF;
-}
-
-#content-1 {
-    left: 20px;
-    top: 10px;
-    position: absolute;
-}
-
-#content-2 {
-    top: 10px;
-    position: absolute;
-    margin-left: 500px;
-}
-
-#content-3 {
-    position: relative;
-    margin-left: 500px;
-}
-
-.span-footer {
-    display: block;
-    margin-top: 5px;
-    cursor: pointer;
-}
-
-.second-bar {
-    display: flex;
-    flex-wrap: wrap;
-    position: absolute;
-    top: 80px;
-    background-color: #827a7a38;
-    width: 100%;
-    height: 200px;
-    color: #000000;
-    font-weight: 400;
-    font-size: 17px;
-    letter-spacing: 3px;
-}
-
-.about-us {
-    letter-spacing: 2px;
-    padding: 10px;
-    margin-left: 80px;
-}
-
-.help {
-    padding: 10px;
-    margin-left: 80px;
-}
-
-.policy {
-    padding: 10px;
-    margin-left: 80px;
-}
-
-.quick-links {
-    padding: 10px;
-    margin-left: 80px;
-}
-
-.third-bar {
-    display: flex;
-    padding:10px;
-    background-color: rgb(250, 247, 247);
-    flex-wrap: wrap;
-    position: absolute;
-    top: 250px;
-}
-
-.third-bar span {
-    color: rgb(142, 138, 138);
-    margin-top: 5px;
-    font-size: 17px;
-    font-weight: 300;
-}
-
-.woman {
-    margin-left: 18px;
-}
-
-.men {
-    margin-left:65px;
-}
-
-.kids {
-    margin-left: 55px;
-}
-
-.footer-brands {
-    margin-left: 90px;
-}
-
-.skin-care {
-    margin-left: 90px;
-}
-
-.hair-care {
-    margin-left: 60px;
-}
-
-.fashin-endbar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #ffffff;
-    top: 60px;
-    position: relative;
-    width:100%;
-    height: 60px;
-    background-color:#67308D;
-    font-size: 16px;
-    letter-spacing: 2px;
-}
-
-.first-bar a {
-    top: 35px;
-    position: relative;
-    font-size: 24px;
-    margin: 10px;
-    color: #ffffff;
-    text-decoration: none;
+    font-size: 1rem;
 }
