--- a/src/main/resources/static/style/sign-in.css
+++ b/src/main/resources/static/style/sign-in.css
@@ -3,132 +3,129 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-image: url("https://plus.unsplash.com/premium_photo-1664202526559-e21e9c0fb46a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"); 
+  background-image: url("https://plus.unsplash.com/premium_photo-1664202526559-e21e9c0fb46a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment:fixed; 
-  background-size:cover; 
-  background-size:100% 100%;
+  background-attachment: fixed;
+  background-size: cover;
+  background-size: 100% 100%;
   background-blend-mode: darken;
-  background-color:rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.3);
   font-family: sans-serif;
 }
-/* .nav-container{
-  display:block;
-  position:absolute;
-  top:0;
-  left:0;
-  width:100%;
-  height:75px;
-  background-color:#9548cd;
-} */
-.logo-img{
-  display:block;
-  position:absolute;
-  margin-left:20px;
-  margin-top:15px;
-  left:0;
-  top:0px;
-  width:130px;
-  height:60px;
+
+.logo-img {
+  display: block;
+  position: absolute;
+  margin-left: 1.25rem;
+  margin-top: 0.9375rem;
+  left: 0;
+  top: 0;
+  width: 8.125rem;
+  height: 3.75rem;
 }
 
 form {
   display: flex;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.7);
-  border:none;
-  border-color: rgb(3, 3, 3);
-  border-radius: 20px;
-  width: 380px;
-  height: 580px;
+  border: none;
+  border-radius: 1.25rem;
+  width: 40%;
+  max-width: 23.75rem;
+  height: 80vh;
   padding: 3rem;
 }
 
 .input {
-  position:relative;
-  top:-40px;
-  border-radius: 10px;
-  border: solid 1px #a5a2a2;
+  position: relative;
+  top: -2.5rem;
+  border-radius: 0.625rem;
+  border: solid 0.0625rem #a5a2a2;
   background: none;
-  margin-top: 20px;
-  width: 400px;
-  height: 55px;
-  color:#ffffff;
-  font-size:18px;
+  margin-top: 1.25rem;
+  width: 100%;
+  height: 3.4375rem;
+  color: #ffffff;
+  font-size: 1.125rem;
 }
 
 ::placeholder {
   color: #EFEFEF;
-  font-size: 16px;
-  letter-spacing:1px;
+  font-size: 1rem;
+  letter-spacing: 0.0625rem;
 }
-.div-label{
-  position:relative;
-  top:20px;
+
+.div-label {
+  position: relative;
+  top: 1.25rem;
 }
 
 label {
   color: #EFEFEF;
   display: block;
-  font-size:18px;
+  font-size: 1.125rem;
 }
 
 .header {
-  position:relative;
+  position: relative;
   color: #EFEFEF;
-  font-size:38px;
-  top:-40px;
+  font-size: 2.375rem;
+  top: -2.5rem;
 }
 
 .anchor-redirect-btn {
   display: flex;
   justify-content: center;
   align-items: center;
-  position:relative;
-  top:-30px;
+  position: relative;
+  top: -1.875rem;
   background-color: #9548cd;
-  margin-top: 20px;
-  margin-left: 25px;
+  margin-top: 1.25rem;
+  margin-left: 1.5625rem;
   color: #ffffff;
   border: none;
-  width: 350px;
-  height: 50px;
-  border-radius: 10px;
+  width: 92%;
+  height: 3.125rem;
+  border-radius: 0.625rem;
   cursor: pointer;
-  font-size: 17px;
+  font-size: 1.0625rem;
   font-weight: 700;
-  transition:0.3s ease;
-  letter-spacing: 1px;
+  transition: 0.3s ease;
+  letter-spacing: 0.0625rem;
   text-decoration: none;
 }
-.anchor-redirect-btn:hover{
-  scale:1.05;
+
+.anchor-redirect-btn:hover {
+  scale: 1.05;
 }
 
 .OR {
-  position:relative;
-  top:-30px;
-  margin-left: 185px;
+  position: relative;
+  top: -1.875rem;
+  margin-left: 66%;
+  transform: translateX(-50%);
 }
 
 #password-reset {
   text-decoration: none;
-  margin-top:0;
+  margin-top: 0;
   display: inline-block;
-  margin-left: 120px;
-  font-size: 18px;
+  margin-left: 33%;
+  font-size: 1.125rem;
   font-weight: 300;
-  letter-spacing: 1px;
-  transition:0.2s ease;
+  letter-spacing: 0.0625rem;
+  transition: 0.2s ease;
 }
-#password-reset:hover{
-  color:rgb(244, 98, 127);
-  scale:1.1;
+
+#password-reset:hover {
+  color: rgb(244, 98, 127);
+  scale: 1.1;
 }
-.checkbox{
-  height:18px;
-  width:20px;
+
+.checkbox {
+  height: 1.125rem;
+  width: 1.25rem;
 }
 
 p {
@@ -138,25 +135,30 @@ p {
 a {
   color: #ffffff;
 }
-.sign-up{
+
+.sign-up {
   position: relative;
-  top:30px;
+  top: 1.875rem;
   font-weight: 600;
 }
-.New-to-paragraph{
-  display:inline-block;
+
+.New-to-paragraph {
+  display: inline-block;
 }
-.signup{
-  display:inline-block;
-  position:relative;
-  top:20px;
+
+.signup {
+  display: inline-block;
+  position: relative;
+  top: 1.25rem;
 }
-.sign-up a{
-  text-decoration:none;
-  font-size:21px;
-  font-weight:700;
-  transition:0.2s ease;
+
+.sign-up a {
+  text-decoration: none;
+  font-size: 1.3125rem;
+  font-weight: 700;
+  transition: 0.2s ease;
 }
-.sign-up a:hover{
-  color:blue;
+
+.sign-up a:hover {
+  color: blue;
 }
