--- a/src/main/resources/templates/customer/CheckOut.html
+++ b/src/main/resources/templates/customer/CheckOut.html
@@ -15,10 +15,10 @@
     <link rel="stylesheet" href="../../static/style/checkOut.css">
 </head>
 <body>
-    <div class="checkout-container">
+    <form class="checkout-container">
         <h2>Checkout</h2>
         <div class="checkout-form">
-            <form>
+            
                 <h3>Shipping Information</h3>
                 <label for="name">Full Name</label>
                 <input type="text" id="name" required>
@@ -46,9 +46,8 @@
                 <input type="text" id="cvv" required>
 
                 <button type="submit" class="checkout-btn">Place Order</button>
-            </form>
         </div>
-    </div>
+    </form>
 </body>
 </html>
 
