--- a/src/main/resources/templates/customer/admin.html
+++ b/src/main/resources/templates/customer/admin.html
@@ -12,26 +12,11 @@
 
 <body>
     <div class="admin-container">
-        <aside class="sidebar">
-            <h1>Fashin Admin</h1>
-            <ul>
-                <li><a href="http://localhost:1211/customer/admin"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
-                <li><a href="#"><i class="fas fa-shopping-cart"></i> Orders</a></li>
-                <li><a href="http://localhost:1211/customer/product"><i class="fas fa-box"></i> Products</a></li>
-                <li><a href="http://localhost:1211/customer/category"><i class="fas fa-tags"></i> Category</a></li>
-                <li><a href="http://localhost:1211/customer/widget"><i class="fas fa-tags"></i> Widget</a></li>
-                <li><a href="#"><i class="fas fa-cog"></i> Settings</a></li>
-                <li><a href="#"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
-            </ul>
-        </aside>
+        <div data-th-replace="~{'fragment/common' :: sidebar}"></div>
+
         <main class="main-content">
             <h1>Dashboard</h1>
-            <div class="stats">
-                <div class="card">Total Orders: <span>120</span></div>
-                <div class="card">Revenue: <span>$15,000</span></div>
-                <div class="card">Products: <span>350</span></div>
-                <div class="card">Users: <span>500</span></div>
-            </div>
+            <div data-th-replace="~{'fragment/common' :: admin-cards}"></div>
             <h2>Manage Products</h2>
             <table>
                 <tablehead>
@@ -83,7 +68,6 @@
             <div>
                 <button id="button1">Submit</button>
             </div>
-        </div>
         </div>
     </form>
 
