--- a/src/main/resources/templates/customer/product.html
+++ b/src/main/resources/templates/customer/product.html
@@ -92,23 +92,26 @@
     <div class="popup-overlay" id="popupOverlay">
         <div class="popup">
             <h2>Add Product</h2>
-            <label for="productName">Product Name:</label>
-            <input type="text" placeholder="Product Name">
+            <form action="/product" method="post">
+                <label for="productName">Product Name:</label>
+                <input type="text" placeholder="Product Name" name="productTitle">
 
-            <label for="productId">Product ID:</label>
-            <input type="text" placeholder="Product ID">
+                <label for="productPrice">Category Price:</label>
+                <input type="text" placeholder="Category Price"  name="productPrice">
 
-            <label for="productId">Category Price:</label>
-            <input type="text" placeholder="Category Price">
+                <label for="productDescription">Product Description:</label>
+                <textarea placeholder="Product Description" name="productDescription"></textarea>
 
-            <label for="productDescription">Product Description:</label>
-            <textarea placeholder="Product Description"></textarea>
+                <label for="productImage">Product Image:</label>
+                <input type="file" accept="image/*">
 
-            <label for="productImage">Product Image:</label>
-            <input type="file" accept="image/*">
+                <select name="category" id="">
+                    <option data-th-each="category : ${categories}" data-th-value="${category.categoryId}" data-th-text="${category.categoryTitle}"></option>
+                </select>
 
-            <button id="submit-button">Submit</button>
-            <button class="close-btn" id="closebtn">Close</button>
+                <button type="submit" id="submit-button">Submit</button>
+                <button class="close-btn" id="closebtn">Close</button>
+            </form>
         </div>
     </div>
 
@@ -125,10 +128,10 @@
         displayDiv.style.display="none";
     });
 
-    submitButton.addEventListener('click',()=>{
-        displayDiv.style.display="none";
-        alert("Product added successfully!");
-    })
+    //submitButton.addEventListener('click',()=>{
+      //  displayDiv.style.display="none";
+      //  alert("Product added successfully!");
+    //})
 </script>
 </body>
 
