--- a/src/main/resources/static/style/product.css
+++ b/src/main/resources/static/style/product.css
@@ -28,7 +28,7 @@ h1 {
 
 .sidebar ul li {
     position: relative;
-    padding: 19% 0%;
+    padding: 17% 0%;
     margin-right: 8%;
 }
 
@@ -88,7 +88,7 @@ th {
     padding: 5% 10%;
     cursor: pointer;
     border-radius: 0.313rem;
-    margin-right: 1rem;
+    margin-right: 0.5rem;
 }
 
 .button:hover {
@@ -154,14 +154,18 @@ label {
     height: 2.5rem;
     border-radius: 0.313rem;
     right: 2%;
-    top: 36%;
+    top: 38%;
     cursor: pointer;
+}
+
+#addproductbtn:hover{
+    color:#FB641B;
 }
 
 .popup-overlay {
     display: none;
     position: fixed;
-    top: 0;
+    top: 0%;
     left: 0;
     width: 100%;
     height: 100%;
@@ -172,20 +176,19 @@ label {
 
 .popup-overlay h2 {
     margin-top: -0.625rem;
-    margin-bottom: 15%;
+    margin-bottom: 12%;
 }
 
 .popup {
     position: fixed;
-    top: 10%;
-    left: 50%;
-    transform: translateX(-50%);
+    top: 5%;
+    left: 34%;
     background: white;
     padding: 3rem;
     border-radius: 0.625rem;
     width: 90%;
     max-width: 21.875rem;
-    height: 31.25rem;
+    height: 30.25rem;
     box-shadow: 0 0 0.625rem rgba(0, 0, 0, 0.2);
     text-align: center;
 }
