--- a/src/main/resources/static/style/sign-in.css
+++ b/src/main/resources/static/style/sign-in.css
@@ -39,12 +39,13 @@ form {
 .input {
   position: relative;
   top: -2.5rem;
+  left:5%;
   border-radius: 0.625rem;
   border: solid 0.0625rem #a5a2a2;
   background: none;
   margin-top: 1.25rem;
-  width: 100%;
-  height: 3rem;
+  width: 90%;
+  height: 2.5rem;
   color: #ffffff;
   font-size: 1.125rem;
 }
