--- a/src/main/resources/static/style/widget.css
+++ b/src/main/resources/static/style/widget.css
@@ -217,3 +217,34 @@ label {
     cursor: pointer;
     margin-top: 0.6rem;
 }
+
+.addProductWidgetBtn{
+    position: absolute;
+    background-color: #6b2e96;
+    color: #EFEFEF;
+    font-size: 1rem;
+    width: 12.5rem;
+    height: 2.5rem;
+    border-radius: 0.313rem;
+    right: 2%;
+    top: 8%;
+    cursor: pointer;
+}
+
+.addWidgetContainer{
+    position:absolute;
+    background-color: #28a745;
+    top:70%;
+    left:30%;
+}
+
+.modal-box{
+    position:absolute;
+    top:30%;
+    left:35%;
+    background-color:#EFEFEF;
+    width:500px;
+    border-radius: 10px;
+}
+
+
