--- a/src/main/resources/templates/customer/plp.html
+++ b/src/main/resources/templates/customer/plp.html
@@ -71,8 +71,7 @@
                     <a data-th-href="|/customer/product/pdp?product=${product.productId}|">
                         <div class="product-image">
                             <span class="discount-tag">50% off</span>
-                            <img src="https://rukminim2.flixcart.com/image/612/612/xif0q/shirt/l/p/g/xl-mens-staylist-chex-shirt-dbex-original-imah3hj4wgjq98dz.jpeg?q=70"
-                                alt="" class="product-thumb">
+                            <img data-th-src="|/product/image/${product.productId}|" class="product-thumb">
                             <button class="card-btn">Add to Wishlist</button>
                         </div>
                         <div class="product-info">
